# downloader

./: .env.example  .gitignore  README.md  TODO.md  download.py  game_concatenator.py  game_downloader.py  main.py  pyproject.toml  rinks.py  run.py
models/: keyframes.py  model.py  settings.py
src/downloader/: __init__.py
src/downloader/cli/: __init__.py  main.py
src/downloader/config/: __init__.py  rinks.py
src/downloader/core/: __init__.py  concatenator.py  downloader.py
src/downloader/models/: settings.py
src/downloader/utils/: helpers.py
tests/: __init__.py  test_concatenator.py  test_downloader.py
