[project]
name = "downloader"
version = "0.1.0"
description = "CLI tool to download and process game videos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-asyncio>=0.1.3",
    "ffmpeg-python==0.2.0",
    "opencv-python>=4.11.0.86",
    "prompt-toolkit>=3.0.51",
    "pydantic>=2.11.4",
    "python-dotenv>=1.1.0",
    "python-ffmpeg>=2.0.12",
    "selenium>=4.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
downloader = "downloader.cli.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/downloader"]
